# darmixcore

./: CMakeLists.txt  README.md  genrev.cmake  revision.h.in.cmake
cmake/: genrev.cmake  options.cmake  showoptions.cmake
dep/acelite/ace/: CMakeLists.txt
dep/g3dlite/: CMakeLists.txt
dep/gsoap/: CMakeLists.txt
dep/mysqllite/: CMakeLists.txt
dep/recastnavigation/Detour/: CMakeLists.txt
dep/recastnavigation/Recast/: CMakeLists.txt
dep/zlib/: CMakeLists.txt
sql/: characters.sql  create_mysql.sql  drop_mysql.sql  realm.sql
sql/tools/: characters_item_duplicates_remove.sql  characters_pet_data_cleanup.sql
src/: CMakeLists.txt
src/collision/: BIH.cpp  BIH.h  CMakeLists.txt  IVMapManager.h  MapTree.cpp  MapTree.h  ModelInstance.cpp  ModelInstance.h  TileAssembler.cpp  TileAssembler.h  VMapDefinitions.h  VMapFactory.cpp  VMapFactory.h  VMapManager2.cpp  VMapManager2.h  VMapTools.h  WorldModel.cpp  WorldModel.h
src/framework/: CMakeLists.txt
src/framework/Policies/: ObjectLifeTime.cpp
src/framework/Utilities/: EventProcessor.cpp
src/game/: AccountMgr.cpp  AccountMgr.h  AddonHandler.cpp  AddonHandler.h  ArenaTeam.cpp  ArenaTeam.h  ArenaTeamHandler.cpp  AuctionHouseBot.cpp  AuctionHouseBot.h  AuctionHouseHandler.cpp  AuctionHouseMgr.cpp  AuctionHouseMgr.h  Bag.cpp  Bag.h  BattleGround.cpp  BattleGround.h  BattleGroundAA.cpp  BattleGroundAA.h  BattleGroundAB.cpp  BattleGroundAB.h  BattleGroundAV.cpp  BattleGroundAV.h  BattleGroundBE.cpp  BattleGroundBE.h  BattleGroundEY.cpp  BattleGroundEY.h  BattleGroundHandler.cpp  BattleGroundMgr.cpp  BattleGroundMgr.h  BattleGroundNA.cpp  BattleGroundNA.h  BattleGroundRL.cpp  BattleGroundRL.h  BattleGroundWS.cpp  BattleGroundWS.h  CMakeLists.txt  Cell.h  CellImpl.h  Channel.cpp  Channel.h  (+274 more)
src/genrev/: CMakeLists.txt
src/realm-server/: AuthCodes.h  AuthSocket.cpp  AuthSocket.h  BufferedSocket.cpp  BufferedSocket.h  CMakeLists.txt  Main.cpp  PatchHandler.cpp  PatchHandler.h  RealmList.cpp  RealmList.h  realm-server.conf.dist  realm-server.rc
src/scripts/: CMakeLists.txt
src/scripts/Custom/: custom_example.cpp  custom_gossip_codebox.cpp  dynamic_teleporter.cpp  npc_barber.cpp  npc_buffer.cpp  npc_customize.cpp  npc_gm_vendor.cpp  npc_mark_changer.cpp  on_events.cpp  test.cpp
src/scripts/EasternKingdoms/: alterac_mountains.cpp  arathi_highlands.cpp  blasted_lands.cpp  boss_kruul.cpp  burning_steppes.cpp  dun_morogh.cpp  duskwood.cpp  eastern_plaguelands.cpp  elwynn_forest.cpp  eversong_woods.cpp  ghostlands.cpp  hinterlands.cpp  ironforge.cpp  isle_of_queldanas.cpp  loch_modan.cpp  redridge_mountains.cpp  searing_gorge.cpp  silvermoon_city.cpp  silverpine_forest.cpp  stormwind_city.cpp  stranglethorn_vale.cpp  swamp_of_sorrows.cpp  tirisfal_glades.cpp  undercity.cpp  western_plaguelands.cpp  westfall.cpp  wetlands.cpp
src/scripts/Kalimdor/: ashenvale.cpp  azshara.cpp  azuremyst_isle.cpp  bloodmyst_isle.cpp  boss_azuregos.cpp  darkshore.cpp  desolace.cpp  durotar.cpp  dustwallow_marsh.cpp  felwood.cpp  feralas.cpp  moonglade.cpp  mulgore.cpp  orgrimmar.cpp  silithus.cpp  stonetalon_mountains.cpp  tanaris.cpp  teldrassil.cpp  the_barrens.cpp  thousand_needles.cpp  thunder_bluff.cpp  ungoro_crater.cpp  winterspring.cpp
src/scripts/Outland/: blades_edge_mountains.cpp  boss_doomlord_kazzak.cpp  boss_doomwalker.cpp  hellfire_peninsula.cpp  nagrand.cpp  netherstorm.cpp  shadowmoon_valley.cpp  shattrath_city.cpp  terokkar_forest.cpp  zangarmarsh.cpp
src/scripts/PrecompiledHeaders/: ScriptPCH.cpp  ScriptPCH.h
src/scripts/World/: areatrigger_scripts.cpp  boss_emeriss.cpp  boss_lethon.cpp  boss_taerar.cpp  boss_ysondre.cpp  go_scripts.cpp  guards.cpp  item_scripts.cpp  mob_generic_creature.cpp  npc_taxi.cpp  (+3 more)
src/shared/: Base.cpp  Base.h  ByteBuffer.h  CMakeLists.txt  Common.cpp  Common.h  DelayExecutor.cpp  DelayExecutor.h  Errors.h  LockedQueue.h  Log.cpp  Log.h  ProgressBar.cpp  ProgressBar.h  ServiceWin32.cpp  ServiceWin32.h  SystemConfig.h  Threading.cpp  Threading.h  Timer.h  Util.cpp  Util.h  WorldPacket.h
src/world-server/: BCSoap.cpp  BCSoap.h  CMakeLists.txt  CliRunnable.cpp  CliRunnable.h  Main.cpp  Master.cpp  Master.h  RARunnable.cpp  RARunnable.h  RASocket.cpp  RASocket.h  WorldRunnable.cpp  WorldRunnable.h  world-server.conf.dist  world-server.rc
(+363 files in other folders)
